--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.main-bg{
+  height: 300px;
+  background-image: url('./img/bg.jpeg');
+  background-position: center;
+  background-size: cover;
+}
+
+.hide{
+  display: none;
+}
+
 .App {
   text-align: center;
 }
